--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/slautebach/n8n-nodes-actual#readme",
-  "author": "n8n-community-nodes",
+  "author": {
+    "name": "slautebach"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/n8n-community-nodes/n8n-nodes-actual"
@@ -40,6 +42,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.3",
     "gulp": "^5.0.0",
+    "n8n-core": "^1.119.1",
     "prettier": "^3.3.2",
     "typescript": "^5.5.3"
   },
