--- a/package.json
+++ b/package.json
@@ -4,50 +4,35 @@
   "description": "Interact with your Actual Budget instance",
   "license": "MIT",
   "homepage": "",
-  "keywords": [
-    "n8n-community-node-package"
-  ],
-  "author": {
-    "name": "Philipp Fehr",
-    "email": "philipp@thefehr.me"
-  },
+  "keywords": ["n8n-community-node-package"],
+  "author": { "name": "Philipp Fehr", "email": "philipp@thefehr.me" },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TheFehr/n8n-nodes-actual.git"
   },
   "scripts": {
-		"build": "n8n-node build",
-		"build:watch": "tsc --watch",
-		"dev": "n8n-node dev",
-		"lint": "n8n-node lint",
-		"lint:fix": "n8n-node lint --fix",
-		"release": "n8n-node release",
-		"prepublishOnly": "n8n-node prerelease"
+    "build": "n8n-node build",
+    "build:watch": "tsc --watch",
+    "dev": "n8n-node dev",
+    "lint": "n8n-node lint",
+    "lint:fix": "n8n-node lint --fix",
+    "release": "n8n-node release",
+    "prepublishOnly": "n8n-node prerelease"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "n8n": {
     "n8nNodesApiVersion": 1,
-		"strict": true,
-    "credentials": [
-      "dist/credentials/ActualBudgetApi.credentials.js"
-    ],
-    "nodes": [
-      "dist/nodes/ActualBudget/ActualBudget.node.js"
-    ]
+    "strict": false,
+    "credentials": ["dist/credentials/ActualBudgetApi.credentials.js"],
+    "nodes": ["dist/nodes/ActualBudget/ActualBudget.node.js"]
   },
   "devDependencies": {
-		"@n8n/node-cli": "*",
-		"eslint": "9.32.0",
-		"prettier": "3.6.2",
-		"release-it": "^19.0.4",
-		"typescript": "5.9.2"
+    "@n8n/node-cli": "*",
+    "eslint": "9.32.0",
+    "prettier": "3.6.2",
+    "release-it": "^19.0.4",
+    "typescript": "5.9.2"
   },
-  "peerDependencies": {
-    "n8n-workflow": "*"
-  },
-  "dependencies": {
-    "@actual-app/api": "25.11.0"
-  }
+  "peerDependencies": { "n8n-workflow": "*" },
+  "dependencies": { "@actual-app/api": "25.11.0" }
 }
